src/objects/Feedback_Response__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback Responses</relationshipLabel>
        <relationshipName>Feedback_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Request</label>
        <referenceTo>Feedback_Request__c</referenceTo>
        <relationshipLabel>Feedback Responses</relationshipLabel>
        <relationshipName>Feedback_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Feedback Responses</relationshipLabel>
        <relationshipName>Feedback_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Experience__c</fullName>
        <label>Team Member Experience</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property10_Quality__c</fullName>
        <label>Property10 Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property10</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Feedback Responses (Property10)</relationshipLabel>
        <relationshipName>Feedback_Responses9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property1_Quality__c</fullName>
        <label>Property1 Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property1</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Feedback Responses</relationshipLabel>
        <relationshipName>Feedback_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property2_Quality__c</fullName>
        <label>Property2 Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property2</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Feedback Responses (Property2)</relationshipLabel>
        <relationshipName>Feedback_Responses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>